5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1616_2939.log
== TEST (2019-04-01 15:08:11) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucro total = vendas*lucro1
empregado = 100 + 

-- ERROR:
File "XXXX", line 3
    lucro total = vendas*lucro1
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:08:31) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucro total = (vendas)*(lucro1)
empregado = 100 + 

-- ERROR:
File "XXXX", line 3
    lucro total = (vendas)*(lucro1)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:08:41) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + 

-- ERROR:
File "XXXX", line 4
    empregado = 100 + 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:10) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:26) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(lucroliquido)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:11:27) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(lucroliquido)

-- EXECUTION TIME:
0.141019
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2939/main.py", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:28) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(lucroliquido)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:11:29) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(lucroliquido)

-- EXECUTION TIME:
0.250004
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2939/main.py", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:29) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(lucroliquido)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:30) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(lucroliquido)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:31) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(lucroliquido)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:11:31) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(lucroliquido)

-- EXECUTION TIME:
0.144597
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2939/main.py", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:31) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(lucroliquido)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:32) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(lucroliquido)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:32) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(lucroliquido)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:49) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2)

-- ERROR:
File "XXXX", line 8
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:57) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2)
-- ERROR:
File "XXXX", line 8
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:58) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2)
-- ERROR:
File "XXXX", line 8
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:12:05) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)
print(round(lucroliquido, 2)
-- ERROR:
File "XXXX", line 7
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:12:17) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)
print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:12:19) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)
print(round(lucroliquido, 2))
-- EXECUTION TIME:
0.197716
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2939/main.py", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:12:20) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)
print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:12:20) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)
print(round(lucroliquido, 2))
-- EXECUTION TIME:
0.151859
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2939/main.py", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:12:20) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)
print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:02) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)
print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:13:03) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)
print(round(lucroliquido, 2))
-- EXECUTION TIME:
0.16271
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2939/main.py", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:06) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)
print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:06) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)
print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:09) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:11) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:13:11) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- EXECUTION TIME:
0.174637
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2939/main.py", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:12) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:12) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:12) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:13) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:13) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:13) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:13) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:14) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:14) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:14) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:15) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:15) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:15) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:16) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:16) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:16) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:17) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:18) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:19) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:19) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:19) 
-- CODE:
vendas = input("x")
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucrototal = (vendas)*(lucro1)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:17:55) 
-- CODE:
vendas = input(float("x"))
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = input(float("x"))
ValueError: could not convert string to float: 'x'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:17:58) 
-- CODE:
vendas = input(float("x"))
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = input(float("x"))
ValueError: could not convert string to float: 'x'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:17:59) 
-- CODE:
vendas = input(float("x"))
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- EXECUTION TIME:
0.129535
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2939/main.py", line 1, in <module>
    vendas = input(float("x"))
ValueError: could not convert string to float: 'x'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:18:00) 
-- CODE:
vendas = input(float("x"))
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = input(float("x"))
ValueError: could not convert string to float: 'x'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:18:08) 
-- CODE:
vendas = input(float(x))
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- EXECUTION TIME:
0.175609
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2939/main.py", line 1, in <module>
    vendas = input(float(x))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:18:08) 
-- CODE:
vendas = input(float(x))
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = input(float(x))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:18:09) 
-- CODE:
vendas = input(float(x))
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = input(float(x))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:18:44) 
-- CODE:
vendas = input(float("espetinhos vendidos"))
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = input(float("espetinhos vendidos"))
ValueError: could not convert string to float: 'espetinhos vendidos'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:18:46) 
-- CODE:
vendas = input(float("espetinhos vendidos"))
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = input(float("espetinhos vendidos"))
ValueError: could not convert string to float: 'espetinhos vendidos'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:00) 
-- CODE:
vendas = float(input("espetinhos vendidos"))
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- OUTPUT:
139.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:19:01) 
-- CODE:
vendas = float(input("espetinhos vendidos"))
lucro1 = 0.83*12
lucrototal = (vendas)*(lucro1)
empregado = 100 + (0.2*(lucrototal))
lucroliquido = (lucrototal)-(empregado)

print(round(lucroliquido, 2))
-- EXECUTION TIME:
0.121011
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
139.04
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
537.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
